[package]
name = "rustExample"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
# "unwind"
panic = "abort"
lto = true
opt-level = 3 #"z" # 3 for speed
debug = false
codegen-units = 1

[dependencies]
jsonwebtoken = "9.3.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
rand = "0.8.5"
tokio = { version = "1.37.0", features = ["full"] }
num_cpus = "1.16.0"
futures = "0.3.30"
